--- a/frontend/src/pages/admHome/styles.css
+++ b/frontend/src/pages/admHome/styles.css
@@ -1,3 +1,23 @@
+.container{
+    background-color: coral;
+    /*altura*/
+    /*largura*/
+    height: auto;
+    max-width: 300px;
+    box-shadow: 5px 5px 2px coral;
+}
+.conteudo{
+    position: absolute;
+    background-color: wheat;
+    width: 100%;
+    height: 100%;
+    
+}
+h1{
+    margin-left: 12px;
+}
+
+/*tags*/
 section{
     text-align: center;
     margin: auto;
