--- a/frontend/src/pages/login/style.css
+++ b/frontend/src/pages/login/style.css
@@ -1,20 +1,52 @@
-.container{
-    background-color: aqua;
-    width: 350px;    
-    height: 300px;
+.login-container{
+    background-color: chocolate;
+    /*altura*/
+    width: auto;
+    max-width: 500px;
     margin: auto;
-    display: flex;
+    margin-top: 30px;
+    /* largura*/
+    height: auto;
+    max-width: 500px;
+    /*alinha verticalmente*/
+    
     align-items: center;
+    /*alinha horizontamente*/
     justify-content: center;
+    box-shadow: 5px 9px 3px chocolate;
 }
+
+.login-container section.form{
+    width: 100%;
+    max-width: 350px;
+    /*margin a direita*/
+    margin-right: 30px;
+}
+
+.login-container section.form form{
+    margin-top: 100px;
+}
+.login-container section.from form h1{
+    font-size: 32px;
+    margin-bottom: 32px;
+}
+.login-container section.form img{
+    max-width: 200px;
+    max-height: 200px;
+    width: auto;
+    height: auto;
+   position: static;
+    margin-top: auto;
+}
+
 /*tags*/
-body{
+/*ativa em todos as pages*/
+.back{
     background-color: antiquewhite;
-}
-form{
-    height: 100px;
-    width: 100px;
-    margin-left: 30px;
+    background-image: url("../../imagens/background.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 1350px 1300px;
 }
 a{
     white-space: pre;
